# opama-oss

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  USERGUIDE.md  alembic.ini  celery_app.py  docker-compose.oss-test.yml  docker-compose.yml  fly.toml  opama-tray.py  opama.ps1  opama.sh  pyproject.toml  pytest.ini  registry.json  requirements-modules.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 080d3a246ef0_extract_github_publish_settings.py  08861d51264f_drop_pokemon_tcg_fks_from_.py  60959477722e_add_plugin_data_table.py  86fa4bee763f_drop_remaining_pokemon_tcg_fks.py  b2c3d4e5f6a7_add_local_install_columns_to_dynamic_plugins.py  b409615fd496_add_shopify_settings_and_product_.py  b5f3c9e21d08_add_storefront_settings_and_marketplace_fields.py  c7e4f1a8b2d0_add_github_fields_to_storefrontsettings.py  d4a8b1c9e3f0_add_guide_fields_to_cardgraderesult.py  ecebd20cbdce_add_insurance_tables.py
app/: cli.py  license.py  main.py  network_validators.py  plugin_installer.py  plugin_loader.py  plugin_signing.py  secrets.py  version.py
app/migrations/: env.py
app/migrations/versions/: 08861d51264f_drop_pokemon_tcg_fks_from_.py  3a973088c5ae_add_property_records_tables.py  40cfbb01575e_add_edge_per_side_and_surface_metrics.py  (+20 more)
control_plane/: README.md  __init__.py  cli.py  config.py  db.py  licensing.py  main.py  models.py  requirements.txt  tenants.py
control_plane/billing/: __init__.py  events.py  stripe_webhook.py
control_plane/provisioner/: __init__.py  base.py  docker.py
control_plane/tests/: e2e_docker_stripe.py
docker/postgres/: init.sql
docs/: DOCKER_GUIDE.md  GLOSSARY.md  LOCAL_DEVELOPMENT_GUIDE.md  MODULE_DEVELOPMENT.md  POOL_DEPLOYMENT.md  PORTFOLIO_USER_GUIDE.md  RELEASE_PROCESS.md  SCHEDULED_TASKS.md  SECURITY_CHECKLIST.md  TESTING_GUIDE.md  UBUNTU_SETUP.md
external_plugins/: README.md
external_plugins/opama_ai/: README.md  chat_router.py  plugin.yaml  pyproject.toml  router.py  suggest_router.py
external_plugins/opama_grading/: README.md  analyzer.py  identifier.py  models.py  plugin.yaml  pyproject.toml  report.py  router.py  schemas.py
external_plugins/opama_pokemon_tcg/: README.md  pyproject.toml
external_plugins/opama_pokemon_tcg/catalog/: models.py  plugin.yaml  pokemon_tcg_client.py  router.py  seed.py  sync_service.py  tasks.py
external_plugins/opama_pokemon_tcg/decks/: decklist.py  models.py  plugin.yaml  router.py  validation.py
external_plugins/opama_pokemon_tcg/inventory/: models.py  plugin.yaml  router.py  tools.py
external_plugins/opama_pokemon_tcg/trading/: models.py  plugin.yaml  router.py
external_plugins/opama_portfolio/: README.md  __init__.py  models.py  plugin.yaml  pyproject.toml  router.py  schemas.py  valuation.py
external_plugins/opama_shopify/: README.md  client.py  models.py  plugin.yaml  pyproject.toml  router.py  schemas.py
external_plugins/opama_storefront/: README.md  models.py  plugin.yaml  pyproject.toml  router.py  schemas.py
opama-ui/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
opama-ui/src/: App.tsx  OpamaApp.tsx  index.css  main.tsx  types.ts
scripts/: backfill_asset_thumbnails.py  backup_db.py  docker-start.sh  export_all_series.py  export_baseline_catalog.py  fetch_cards_for_set.py  fix-line-endings.sh  generate_license_key.py  git_history_slim.sh  import_cards.py  ingest_cards.py  install-docker-ubuntu.sh  migrate_inventory_price_tracking.py  migrate_to_postgres.py  new_module.py  run-tests.sh  seed_demo.py  setup-soa.sh  start-docker.sh  start-local.sh  stop-docker.sh  sync_oss_module.sh  test_migration.py  verify-soa.sh
services/: data.db-shm  data.db-wal
services/ai_assistant/: models.py  plugin.yaml  router.py  schemas.py
services/auth/: README.md  __init__.py  entitlements.py  firebase_admin.py  middleware.py  org_context.py  pat.py  router.py
services/billing/: __init__.py  checkout.py  config.py  events.py  router.py  service.py  webhook.py
services/custom_assets/: README.md  models.py  plugin.yaml  router.py  schemas.py  tools.py
services/github_publish/: client.py  plugin.yaml  router.py  schemas.py
services/insurance/: models.py  plugin.yaml  router.py  schemas.py  tools.py
services/integrations/: README.md  plugin.yaml  router.py
services/licensing/: README.md  plugin.yaml  router.py
services/plugin_store/: README.md  models.py  plugin.yaml  router.py
services/real_estate/: models.py  plugin.yaml  router.py  schemas.py  tools.py
services/shared/: README.md  audit.py  database.py  models.py  models_plugin_data.py  models_security.py  plugin_data.py  rate_limit.py  rls.py  storage.py  tool_registry.py  user_secrets.py
services/showcase/: README.md  models.py  plugin.yaml  router.py
services/system/: README.md  plugin.yaml  router.py
services/vehicles/: models.py  plugin.yaml  router.py  schemas.py  tools.py
tests/: conftest.py  requirements.txt  test_ai_providers.py  test_api_health.py  test_billing_webhook.py  test_cards_api.py  test_deck_validation.py  test_decklist.py  test_decks_api.py  test_dynamic_local_install.py  test_entitlements.py  test_integration.py  test_inventory_api.py  test_license.py  test_plugin_data.py  test_plugin_installer.py  test_plugin_loader_logic.py  test_plugin_manifests.py  test_plugin_signing.py  test_plugins_api.py  test_remote_plugins.py  test_storage.py
(+119 files in other folders)
