[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opama-oss"
version = "0.2.0"
description = "Open Personal Asset Management — self-hosted personal asset platform"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["asset-management", "self-hosted", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core runtime dependencies — the minimum needed to run the platform.
# Heavy ML/plugin deps are in optional extras below.
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel",
    "psycopg2-binary",
    "pydantic",
    "python-multipart",
    "python-dotenv",
    "httpx",
    "aiohttp",
    "pyyaml",
    "packaging",
    "PyJWT[crypto]",
    "bcrypt",
    "requests",
    "firebase-admin",
    "slowapi",
    "alembic",
    "redis",
    "apscheduler",
    "Pillow",
]

[project.optional-dependencies]
# pip install opama-oss[grading]  — card grading pipeline
grading = [
    "opencv-python-headless",
    "numpy",
    "pytesseract",
]

# pip install opama-oss[ai]  — RAG chat, AI suggest, LLM providers
ai = [
    "anthropic",
    "openai",
    "chromadb",
    "FlagEmbedding",
    "lxml>=6.1.1",
]

# pip install opama-oss[tasks]  — background task queue (Celery)
tasks = [
    "celery[redis]==5.6.3",
    "kombu==5.6.2",
    "flower==2.0.1",
]

# pip install opama-oss[all]  — everything
all = [
    "opama-oss[grading,ai,tasks]",
]

[project.scripts]
opama = "app.cli:main"

[project.urls]
Homepage = "https://github.com/GeneralOperationsDirector/opama-oss"
Issues = "https://github.com/GeneralOperationsDirector/opama-oss/issues"

[tool.setuptools.packages.find]
include = ["app*", "services*", "external_plugins*"]

[tool.setuptools.package-data]
"*" = [
    "plugin.yaml",
    "*.json",
    "*.mako",
    "*.gz",
    "*.sql",
]
"app.migrations" = ["README", "versions/*.py"]
"app.migrations.versions" = ["*.py"]
