[project]
name = "opama-pokemon-tcg"
version = "1.0.0"
description = "Pokémon TCG catalog, inventory, deck building, and trading — opama premium module"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "pydantic",
    "sqlmodel",
    "requests",
    "celery",
]

[tool.setuptools]
packages = [
    "opama_pokemon_tcg",
    "opama_pokemon_tcg.catalog",
    "opama_pokemon_tcg.inventory",
    "opama_pokemon_tcg.decks",
    "opama_pokemon_tcg.trading",
]

# This file documents the package's eventual standalone shape (the form it would
# take as github.com/GeneralOperationsDirector/opama-oss-pokemon) — see
# external_plugins/README.md for what's still open before that split actually
# happens (distribution channel, version pinning, CI). Today opama loads this
# plugin via PLUGIN_PATHS directory discovery, not via `pip install`; this file
# isn't yet exercised by the loader.
